First release for librawfx